--- a/signupform/css/styles.css
+++ b/signupform/css/styles.css
@@ -17,8 +17,6 @@ p {
 }
 
 /**************** form selectors ******************/
-
-
 h1,
 legend {
     font-family: 'Playfair Display', serif;   
@@ -35,7 +33,7 @@ legend {
     margin: 0;
 } 
 
-label{
+label {
     font-weight: 300;
     font-size: 1.10em;
     opacity: 70%;
@@ -52,9 +50,11 @@ textarea {
     padding: 15px;
     border-radius: 4px;
     width:100%;
+    outline-color: white;
+    transition: all .5s ease-out;
 }
 
-input[name="user_zip_code"]:last-child{
+input[name="user_zip_code"]:last-child {
     width:50%;
 }
 
@@ -64,6 +64,7 @@ input[type="tel"]:focus,
 select:focus,
 textarea:focus {
     background-color: #d1d1d1;
+    outline-color: #48739bfa;
 }
 
 input::placeholder,
@@ -78,7 +79,7 @@ textarea::placeholder {
 
 input[type="tel"]::placeholder,
 input[name="user_address"]::placeholder,
-textarea::placeholder{
+textarea::placeholder {
     text-align: left;
 }
 
@@ -86,16 +87,10 @@ input[type="checkbox"] {
     opacity: 80;
 } 
 
-textarea{
+textarea {
     resize:none;
     overflow: auto;
 }
-
-input:focus,
-select:focus,
-textarea:focus {
-    outline-color: #48739bfa;
-} 
 
 select {
     /* In order to change the default drop down arrow from the select 
@@ -119,12 +114,12 @@ select {
     pseudo-classes, I just thought the method I found online was smoother and more effective
     for future use.
 */
-select:invalid{
+select:invalid {
     color:rgb(165, 165, 165);
     font-weight: 300;
 }
 
-button{
+button {
     display: block;
     font-size: 1.3em;
     color:white;
@@ -135,16 +130,19 @@ button{
     width: 98%;    
 }
 
-button:focus{
+button:focus {
     outline-color: rgb(19, 124, 115) ;
 }
 
 /* class selectors */
-
-.container
-{
+.container {
     width: 90%;
     margin: 0 auto;
+}
+
+.flex-pair {
+  display: flex;
+  flex-direction: column;
 }
 
 /***************** header layout ******************/
@@ -195,17 +193,17 @@ legend {
     padding-bottom: 20px;
 }
 
-.contact-info label {
-    padding-bottom: 10px;
+.contact-info div:nth-child(-n+7) {
+    padding-bottom: 20px;
 }
 
-.contact-info label:nth-last-child(-n+12) {
-    padding-top: 20px;
+.flex-pair label {
+    padding-bottom: 10px;
 }
 
 /* horizantol line */
 .mid-section {
-    margin-top: 25px;
+    margin-top: 30px;
     border-top: 2px solid black;
 }
 
@@ -227,22 +225,21 @@ legend {
 }
 
 .title-section,
-label[for="other_topics"]
-{
+label[for="other_topics"] {
     font-size: 1.05em;
     line-height: 1.5;
 }
 
-.title-section:nth-child(8){
+.title-section:nth-child(8) {
     padding-top:15px;
 }
 
-.title-item{
+.title-item {
     font-size:1.05em;
 }
 
 
-input[type="checkbox"]{
+input[type="checkbox"] {
     position: absolute;
     top:5px;                
     left: 4px;
@@ -277,7 +274,7 @@ input[type="radio"] {
     padding-left: 33px;
 }
 
-.radio-label:nth-child(9){
+.radio-label:nth-child(9) {
     padding-bottom: 10px;
 }
 
@@ -292,7 +289,7 @@ input[type="radio"] {
     margin-top: 3px;
 }
 
-.radio-dot:after{       /*  creates the white dot in in the middle of the span element */
+.radio-dot:after {       /*  creates the white dot in in the middle of the span element */
     content: "";
     position: absolute;        
     top:4px;                
@@ -313,7 +310,7 @@ input[type="radio"]:checked + .radio-dot:after {     /* displays the white dot i
      display: block; 
 }
 
-input[type="radio"]:checked + .radio-dot:hover{
+input[type="radio"]:checked + .radio-dot:hover {
     background-color: rgb(58, 94, 201);
     border-color: rgb(58, 94, 201);
 }
@@ -326,33 +323,96 @@ label[for="other_topics"] {
    margin-top: 10px;
 }
 
-button{
+button {
     margin: 20px auto 20px;
     padding: 16px 35px;
 }
 
-.copyright{
+.copyright {
     font-style: italic;
     text-align: center;
     font-size: .90em;
     font-weight: 400;
-    color:rgb(133, 132, 132);
+    color:white;
+}
+
+.copyright-container {
+    background-color: #2b3946fa;
+    padding: 20px 0;
+    margin-top: 25px;
+}
+
+.copyright-container p {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 /* media quaries */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 768px) {
 
-    .body-wrap {
-      max-width: 600px;
-      margin: 0 auto;
+    /* header layout */
+    .header-intro h1 {
+        font-size: 1.65em;
+    }
+
+    .header-intro {
+        margin-top: 50px;
+        padding-bottom: 10px;
+    }
+
+    /* main/form layout */
+    .main-wrap {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+
+    .form-wrapper {
+        margin-top: 40px;
+    }
+
+    .contact-info legend {
+        padding-bottom: 30px;
+    }
+
+    label {
+        color: #2b3946fa;
+        font-weight: 400;
+    }
+
+    .newsletter legend {
+        padding-bottom: 20px;
+    }
+
+    .flex-pair {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .flex-pair input,
+    select {
+        flex-basis: 77%;
+    }
+
+    input[name="user_zip_code"]:last-child {
+        flex-basis: 20%;
+    }
+
+    .flex-pair label {
+        padding-bottom: 0;
+        flex-basis: 23%;
     }
   
-    .newsletter-wrapper,
-    button {
-        width: 100%;
+    .contact-info div:nth-child(-n+7) {
+        padding-bottom: 25px;
+       }
+
+    .mid-section {
+        margin-top: 50px;
+        margin-bottom: 25px;
     }
 
-    input[type="checkbox"]{
+    /* checkboxes/radios layout */
+    input[type="checkbox"] {
         left: 0;
     }
 
@@ -368,6 +428,16 @@ button{
     .checkbox-label,
     .radio-label{
         padding-left: 29px;
+    }  
+
+    .newsletter-wrapper,
+    button {
+        width: 100%;
+    }
+
+    /* copyright layout */
+    .copyright-container {
+        margin-top: 50px;
     }
 }
   
